# SSGPD

./: .gitignore  README.md  requirements.txt
Classifier/: __init__.py  main_1v.py  main_1v_gpd.py  main_1v_mc.py  main_1v_pointnet2.py  main_fullv.py  main_fullv_gpd.py  main_fullv_mc.py  main_test.py  test_pointnet2.py  train_pointnet.py
Classifier/dgcnn/: train_dgcnn.py
Classifier/model/: dataset_loader.py  dataset_loader_runtime.py  dataset_old.py  dataset_ssgpd.py  dataset_ycb.py  to_libtorch.py
Classifier/pointconv/: eval_pointconv.py  train_pointconv.py
Generator/: cal_grasp_from_file.py  dataset_generator.py  dataset_generator_ycb.py  grasps_generator.py  kinect2grasp_python2.py  test_grasp_sample.py  test_grasp_sample_ycb.py  test_grasps_sampler.py
Generator/config/: gripper_params.yaml  sample_config.yaml
Generator/grasp/: contacts.py  grasp.py  grasp_sampler.py  graspable_object.py  gripper.py  quality.py
Generator/test/: cloud.pcd  mayavi_test.py  meshpy_test.py  normals_as_xyz.pcd  (+2 more)
Generator/utils/normals_estimator/: CMakeLists.txt  cloud.pcd  cloud_voxel.pcd  normals_as_xyz.pcd  normals_estimator.cpp
PointNetGPD/: main_1v.py  main_1v_mc.py  main_1v_pointnet2.py  main_test.py  test_pointnet2.py  ycb_cloud_generate.py
dataset/: ycb_meshes_google
extract_normals/: CMakeLists.txt  extract_normals.cpp  surface_cloud.ply
normal_estimator/: CMakeLists.txt  cloud.pcd  cloud_with_normals.pcd  normal_estimator.cpp  normals.pcd  normals_as_xyz.pcd
normals_estimator/: surface_cloud.pcd  surface_cloud.ply
test/: mayavi_test.py  pcd_read.py
(+62 files in other folders)
